--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4  if you still can not understand why parenting ...      1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        " '[CLS]if you still can not understand why parenting and gun ownership are major responsibilities, please stay childless and unarmed.   \\n[SEP]']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "       1, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,15 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CLS] gun violence cannot be abstracted from a broader culture of violence and authoritarianism that calls for more gun ownership, more police, and more national security. [SEP]\n",
-      "['[CLS]', 'gun', 'violence', 'cannot', 'be', 'abstract', '##ed', 'from', 'a', 'broad', '##er', 'culture', 'of', 'violence', 'and', 'author', '##itarian', '##ism', 'that', 'calls', 'for', 'more', 'gun', 'ownership', ',', 'more', 'police', ',', 'and', 'more', 'national', 'security', '.', '[SEP]']\n"
+      "[CLS]hopefully we aren't jumping the gun here, but things really need to improve if elon really wants twitter to have a future under his ownership.[SEP]\n",
+      "['[CLS]', 'hope', '##fully', 'we', 'aren', \"'\", 't', 'jumping', 'the', 'gun', 'here', ',', 'but', 'things', 'really', 'need', 'to', 'improve', 'if', 'el', '##on', 'really', 'wants', 't', '##wit', '##ter', 'to', 'have', 'a', 'future', 'under', 'his', 'ownership', '.', '[SEP]']\n"
      ]
     }
    ],
@@ -224,23 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  101, 23103, 26342, 25259, 10347, 66770, 10336, 10188,   169,\n",
-       "       41848, 10165, 15162, 10108, 26342, 10111, 17034, 63378, 13397,\n",
-       "       10189, 31886, 10142, 10798, 23103, 41354,   117, 10798, 15034,\n",
-       "         117, 10111, 10798, 11844, 21849,   119,   102,     0,     0,\n",
+       "array([  101, 50725, 42920, 11951, 99045,   112,   188, 99257, 10105,\n",
+       "       23103, 19353,   117, 10473, 24682, 30181, 17367, 10114, 33992,\n",
+       "       12277, 10125, 10263, 30181, 45769,   188, 56082, 10877, 10114,\n",
+       "       10529,   169, 16711, 10571, 10226, 41354,   119,   102,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -285,37 +285,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([  101, 10105, 13170, 10833,   173, 64207, 10107, 23103, 41354, 10111,\n",
-      "        33700,   187, 22277, 10107, 10911,   119, 11850, 11299, 19353,   117,\n",
-      "        10105, 11284, 57156, 19466, 10108, 31199, 20562, 10911, 38008, 10798,\n",
-      "        44929, 11084, 33700,   119,   102,     0,     0,     0,     0,     0,\n",
+      "tensor([  101, 10105, 89284, 16316, 10393,   169, 23103, 18077,   119, 10684,\n",
+      "        15911, 10169, 68930, 10165, 23103, 41354, 28160, 12888, 13172, 15306,\n",
+      "        23103, 26342,   119, 12976, 10944,   102,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "            0,     0,     0,     0], dtype=torch.int32)\n",
-      "tensor(2)\n",
+      "tensor(1)\n",
       "tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-      "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0.,\n",
+      "        1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
-      "tensor([  101, 10798, 31199, 10301, 42780, 10114, 10798, 23103, 26342,   119,\n",
-      "        10105, 10992, 43934, 16316, 10106, 10105, 19626, 10529, 10105, 18134,\n",
-      "        23103, 41354,   117, 10173, 37839, 16376, 10111, 14087, 31626,   119,\n",
-      "        13190, 10111, 12694, 10301, 10472, 15875, 10155, 16330, 10107, 10689,\n",
-      "        10301, 15875, 10155,   169, 11365, 12008,   119, 16330, 10107, 15329,\n",
-      "        10455, 10992, 10108, 10455, 31199, 11222, 17139, 17791, 26426, 47715,\n",
-      "        10107,   119,   102,     0], dtype=torch.int32)\n",
-      "tensor(2)\n",
+      "tensor([   101,  10105,  14105,  10392,  19342,  10426,  72894,  22201,  10114,\n",
+      "           169,  11206, 106125,  86957,    119,  10105,  42939,  19231,  12606,\n",
+      "         10246,  52339,  58839,  10189,  14932,    119,  10105,  13451,  10635,\n",
+      "         11155,  10124,    169,  28950,  14866,    117,  42939,  11337,  10261,\n",
+      "         10491,  15698,  17021,  10111,  53653,  41354,  10108,  31199,  11337,\n",
+      "         10347,  58587,    119,  11059,  13028,  48089,  10114,  10347,    169,\n",
+      "         30931,    117,  11850,  10992,  23103,  77761,  10107,    102,      0,\n",
+      "             0], dtype=torch.int32)\n",
+      "tensor(1)\n",
       "tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-      "        1., 1., 1., 1., 1., 1., 1., 1., 1., 0.])\n"
+      "        1., 1., 1., 1., 1., 1., 1., 1., 0., 0.])\n"
      ]
     }
    ],
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +391,7 @@
        "Name: tweets, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
        " \"[CLS] many of us comment from afar. distance gives perspective. uncontrolled gun ownership with few checks, seems crazy to us. we live in countries where mass shootings are rare. it appears illogical and immoral to us to combat mass shootings with 'thoughts and prayers' only. [SEP]\"]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
        "       1, 0, 0, 1, 0, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +479,7 @@
        "           0])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -602,17 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight']\n",
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -930,7 +931,7 @@
        ")"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1003,53 +1004,73 @@
      "output_type": "stream",
      "text": [
       "Training...\n",
-      "  Average training loss: 1.08\n",
+      "  Average training loss: 1.03\n",
       "Running Validation...\n",
-      "  Accuracy: 0.31\n",
+      "  Accuracy: 0.47\n",
       "Training...\n",
-      "  Average training loss: 0.99\n",
+      "  Average training loss: 0.92\n",
       "Running Validation...\n",
-      "  Accuracy: 0.50\n",
+      "  Accuracy: 0.41\n",
       "Training...\n",
-      "  Average training loss: 0.93\n",
+      "  Average training loss: 0.70\n",
       "Running Validation...\n",
-      "  Accuracy: 0.50\n",
+      "  Accuracy: 0.34\n",
       "Training...\n",
-      "  Average training loss: 0.71\n",
+      "  Average training loss: 0.45\n",
       "Running Validation...\n",
-      "  Accuracy: 0.44\n",
+      "  Accuracy: 0.41\n",
       "Training...\n",
-      "  Average training loss: 0.52\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.41\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.28\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.17\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.12\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.06\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.05\n",
+      "  Average training loss: 0.25\n",
       "Running Validation...\n",
       "  Accuracy: 0.38\n",
       "Training...\n",
-      "  Average training loss: 0.05\n",
+      "  Average training loss: 0.09\n",
       "Running Validation...\n",
-      "  Accuracy: 0.50\n",
+      "  Accuracy: 0.41\n",
+      "Training...\n",
+      "  Average training loss: 0.04\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "Training...\n",
+      "  Average training loss: 0.03\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.47\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.38\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.41\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.41\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.41\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.41\n",
+      "Training...\n",
+      "  Average training loss: 0.01\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "Training...\n",
+      "  Average training loss: 0.01\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
       "Training...\n",
       "  Average training loss: 0.02\n",
       "Running Validation...\n",
@@ -1057,31 +1078,11 @@
       "Training...\n",
       "  Average training loss: 0.01\n",
       "Running Validation...\n",
-      "  Accuracy: 0.38\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
       "  Accuracy: 0.44\n",
       "Training...\n",
-      "  Average training loss: 0.01\n",
+      "  Average training loss: 0.02\n",
       "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.50\n",
+      "  Accuracy: 0.44\n",
       "\n",
       "Training complete!\n"
      ]
@@ -1100,7 +1101,8 @@
     "model.zero_grad()\n",
     "\n",
     "for epoch_i in range(0, epochs):\n",
-    "    \n",
+    "\n",
+    "    print('Epoch: ', epoch_i)    \n",
     "    print('Training...')\n",
     "    total_loss = 0\n",
     "\n",
@@ -1186,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1196,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy: 0.95\n"
+      "Accuracy: 0.47\n"
      ]
     }
    ],
