--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import torch\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +99,7 @@
        "4  if you still can not understand why parenting ...      1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +145,7 @@
        " '[CLS]if you still can not understand why parenting and gun ownership are major responsibilities, please stay childless and unarmed.   \\n[SEP]']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +181,7 @@
        "       1, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +231,7 @@
        "           0])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +382,7 @@
        "Name: tweets, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +407,7 @@
        " \"[CLS] many of us comment from afar. distance gives perspective. uncontrolled gun ownership with few checks, seems crazy to us. we live in countries where mass shootings are rare. it appears illogical and immoral to us to combat mass shootings with 'thoughts and prayers' only. [SEP]\"]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +432,7 @@
        "       1, 0, 0, 1, 0, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +470,7 @@
        "           0])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +922,7 @@
        ")"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +954,7 @@
     "                )\n",
     "\n",
     "#(CAN EDIT FOR BETTER EXPERIMENT)\n",
-    "epochs = 20\n",
+    "epochs = 5\n",
     "\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "\n",
@@ -982,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,95 +987,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training...\n",
-      "  Average training loss: 1.03\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.47\n",
-      "Training...\n",
-      "  Average training loss: 0.92\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.70\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.34\n",
-      "Training...\n",
-      "  Average training loss: 0.45\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.25\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.38\n",
-      "Training...\n",
-      "  Average training loss: 0.09\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.04\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.03\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.47\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.38\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.41\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.01\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "Training...\n",
-      "  Average training loss: 0.02\n",
-      "Running Validation...\n",
-      "  Accuracy: 0.44\n",
-      "\n",
-      "Training complete!\n"
+      "Epoch:  0\n",
+      "Training...\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA out of memory. Tried to allocate 352.00 MiB (GPU 0; 8.00 GiB total capacity; 6.01 GiB already allocated; 0 bytes free; 6.30 GiB reserved in total by PyTorch)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_156\\1765047901.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[1;31m#updating the optimizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m         \u001b[1;31m#decreasing the learning rate using the scheduler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\torch\\optim\\lr_scheduler.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[0minstance\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_step_count\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[0mwrapped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__get__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;31m# Note that the returned function here is no longer a bound method,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\torch\\optim\\optimizer.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     87\u001b[0m                 \u001b[0mprofile_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Optimizer.step#{}.step\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m                 \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprofiler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecord_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprofile_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m                     \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\transformers\\optimization.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    360\u001b[0m                 \u001b[0mexp_avg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.0\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    361\u001b[0m                 \u001b[0mexp_avg_sq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddcmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.0\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 362\u001b[1;33m                 \u001b[0mdenom\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexp_avg_sq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"eps\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    363\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    364\u001b[0m                 \u001b[0mstep_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lr\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 352.00 MiB (GPU 0; 8.00 GiB total capacity; 6.01 GiB already allocated; 0 bytes free; 6.30 GiB reserved in total by PyTorch)"
      ]
     }
    ],
@@ -1188,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1121,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy: 0.47\n"
+      "Accuracy: 0.46\n"
      ]
     }
    ],
