--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4  if you still can not understand why parenting ...      1"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " '[CLS]if you still can not understand why parenting and gun ownership are major responsibilities, please stay childless and unarmed.   \\n[SEP]']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "       1, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "           0])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -342,12 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "#(CAN EDIT FOR BETTER EXPERIMENT) (have to change below for testing set as well)\n",
-    "batch_size = 8\n",
+    "batch_size = 4\n",
     "\n",
     "#train the data using pytorch's DataLoader, mask, label as set of datas with batch size of batch_size\n",
     "train_data = TensorDataset(train_inputs, train_masks, train_labels)\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "Name: tweets, dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        " \"[CLS] many of us comment from afar. distance gives perspective. uncontrolled gun ownership with few checks, seems crazy to us. we live in countries where mass shootings are rare. it appears illogical and immoral to us to combat mass shootings with 'thoughts and prayers' only. [SEP]\"]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "       1, 0, 0, 1, 0, 2, 1, 1, 1, 2, 1], dtype=int64)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "           0])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -549,12 +549,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "#(CAN EDIT FOR BETTER EXPERIMENT) (change in testing dataset as well..)\n",
-    "batch_size = 8\n",
+    "batch_size = 4\n",
     "\n",
     "test_data = TensorDataset(test_inputs, test_masks, test_labels)\n",
     "test_sampler = RandomSampler(test_data)\n",
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -594,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -922,7 +922,7 @@
        ")"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
     "                )\n",
     "\n",
     "#(CAN EDIT FOR BETTER EXPERIMENT)\n",
-    "epochs = 5\n",
+    "epochs = 10\n",
     "\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "\n",
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -995,21 +995,32 @@
      "output_type": "stream",
      "text": [
       "Epoch:  0\n",
-      "Training...\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "CUDA out of memory. Tried to allocate 352.00 MiB (GPU 0; 8.00 GiB total capacity; 6.01 GiB already allocated; 0 bytes free; 6.30 GiB reserved in total by PyTorch)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_156\\1765047901.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[1;31m#updating the optimizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m         \u001b[1;31m#decreasing the learning rate using the scheduler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\torch\\optim\\lr_scheduler.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[0minstance\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_step_count\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[0mwrapped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__get__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;31m# Note that the returned function here is no longer a bound method,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\torch\\optim\\optimizer.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     87\u001b[0m                 \u001b[0mprofile_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Optimizer.step#{}.step\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m                 \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprofiler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecord_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprofile_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m                     \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\ERIC\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\transformers\\optimization.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    360\u001b[0m                 \u001b[0mexp_avg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.0\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    361\u001b[0m                 \u001b[0mexp_avg_sq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddcmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.0\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 362\u001b[1;33m                 \u001b[0mdenom\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexp_avg_sq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"eps\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    363\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    364\u001b[0m                 \u001b[0mstep_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lr\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 352.00 MiB (GPU 0; 8.00 GiB total capacity; 6.01 GiB already allocated; 0 bytes free; 6.30 GiB reserved in total by PyTorch)"
+      "Training...\n",
+      "  Average training loss: 1.05\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.50\n",
+      "Epoch:  1\n",
+      "Training...\n",
+      "  Average training loss: 1.03\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "Epoch:  2\n",
+      "Training...\n",
+      "  Average training loss: 0.79\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.38\n",
+      "Epoch:  3\n",
+      "Training...\n",
+      "  Average training loss: 0.48\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.38\n",
+      "Epoch:  4\n",
+      "Training...\n",
+      "  Average training loss: 0.29\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.44\n",
+      "\n",
+      "Training complete!\n"
      ]
     }
    ],
@@ -1113,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1132,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy: 0.46\n"
+      "Accuracy: 0.49\n"
      ]
     }
    ],
