--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,12 +46,81 @@
       " 0   tweets  414 non-null    object\n",
       " 1   class   414 non-null    object\n",
       "dtypes: object(2)\n",
-      "memory usage: 9.7+ KB\n"
+      "memory usage: 25.9+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweets</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hopefully we aren't jumping the gun here, but ...</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Unfortunately it doesn't matter whether gun ow...</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I support Marco Rubio, who believes the soluti...</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gun rights are individual liberties and are st...</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>If you still can not understand why parenting ...</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              tweets class\n",
+       "0  Hopefully we aren't jumping the gun here, but ...     N\n",
+       "1  Unfortunately it doesn't matter whether gun ow...     N\n",
+       "2  I support Marco Rubio, who believes the soluti...     R\n",
+       "3  Gun rights are individual liberties and are st...     R\n",
+       "4  If you still can not understand why parenting ...     R"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined.info()"
+    "combined.info()\n",
+    "combined.head()"
    ]
   },
   {
