--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#with help of https://mccormickml.com/2019/07/22/BERT-fine-tuning/\n",
     "import tensorflow as tf\n",
     "import torch\n",
     "\n",
@@ -347,7 +348,7 @@
    "outputs": [],
    "source": [
     "#(CAN EDIT FOR BETTER EXPERIMENT) (have to change below for testing set as well)\n",
-    "batch_size = 4\n",
+    "batch_size = 16\n",
     "\n",
     "#train the data using pytorch's DataLoader, mask, label as set of datas with batch size of batch_size\n",
     "train_data = TensorDataset(train_inputs, train_masks, train_labels)\n",
@@ -554,7 +555,7 @@
    "outputs": [],
    "source": [
     "#(CAN EDIT FOR BETTER EXPERIMENT) (change in testing dataset as well..)\n",
-    "batch_size = 4\n",
+    "batch_size = 16\n",
     "\n",
     "test_data = TensorDataset(test_inputs, test_masks, test_labels)\n",
     "test_sampler = RandomSampler(test_data)\n",
@@ -601,10 +602,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -954,7 +955,7 @@
     "                )\n",
     "\n",
     "#(CAN EDIT FOR BETTER EXPERIMENT)\n",
-    "epochs = 10\n",
+    "epochs = 5\n",
     "\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "\n",
@@ -996,29 +997,29 @@
      "text": [
       "Epoch:  0\n",
       "Training...\n",
-      "  Average training loss: 1.05\n",
+      "  Average training loss: 1.06\n",
       "Running Validation...\n",
-      "  Accuracy: 0.50\n",
+      "  Accuracy: 0.41\n",
       "Epoch:  1\n",
       "Training...\n",
-      "  Average training loss: 1.03\n",
+      "  Average training loss: 0.96\n",
       "Running Validation...\n",
-      "  Accuracy: 0.44\n",
+      "  Accuracy: 0.53\n",
       "Epoch:  2\n",
       "Training...\n",
-      "  Average training loss: 0.79\n",
+      "  Average training loss: 0.85\n",
       "Running Validation...\n",
-      "  Accuracy: 0.38\n",
+      "  Accuracy: 0.62\n",
       "Epoch:  3\n",
       "Training...\n",
-      "  Average training loss: 0.48\n",
+      "  Average training loss: 0.75\n",
       "Running Validation...\n",
-      "  Accuracy: 0.38\n",
+      "  Accuracy: 0.59\n",
       "Epoch:  4\n",
       "Training...\n",
-      "  Average training loss: 0.29\n",
+      "  Average training loss: 0.69\n",
       "Running Validation...\n",
-      "  Accuracy: 0.44\n",
+      "  Accuracy: 0.59\n",
       "\n",
       "Training complete!\n"
      ]
@@ -1132,7 +1133,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy: 0.49\n"
+      "Accuracy: 0.39\n"
      ]
     }
    ],
